(doc): adding more security
